# A-Sliced-Wasserstein-Loss-for-Neural-Texture-Synthesis

./: pyproject.toml
SWLoss/src/: get_and_load_pth.py  slicing_loss.py
src/: slicing_loss.py
