[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SWLoss"
version = "0.1.0"
description = "SWD loss for texture"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

# List your project's main dependencies here
dependencies = [
    "platformdirs",
]

